--- a/Evo/Evolution/Evolution.vcxproj.filters
+++ b/Evo/Evolution/Evolution.vcxproj.filters
@@ -18,20 +18,6 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="win32_evoController.h">
-      <Filter>Headerdateien</Filter>
-    </ClInclude>
-    <ClInclude Include="win32_resetDlg.h">
-      <Filter>Headerdateien</Filter>
-    </ClInclude>
-    <ClInclude Include="GenerationDisplay.h">
-      <Filter>Headerdateien</Filter>
-    </ClInclude>
-    <ClInclude Include="win32_evoAppWindow.h">
-      <Filter>Headerdateien</Filter>
-    </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
     <ClCompile Include="Evolution.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
@@ -54,6 +40,18 @@
       <Filter>Quelldateien</Filter>
     </ClCompile>
     <ClCompile Include="EvoAppMenu.ixx">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="EvoAppWindow.ixx">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="GenerationDisplay.ixx">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="ResetDlg.ixx">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="EvoController.ixx">
       <Filter>Quelldateien</Filter>
     </ClCompile>
   </ItemGroup>
