--- a/Evo/History/History.vcxproj.filters
+++ b/Evo/History/History.vcxproj.filters
@@ -63,5 +63,8 @@
     <ClCompile Include="HistModelData.ixx">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="HistoryLib.ixx">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
