--- a/Evo/EvoWindows/EvoWindows.vcxproj
+++ b/Evo/EvoWindows/EvoWindows.vcxproj
@@ -194,6 +194,9 @@
     <ProjectReference Include="..\EvolutionCore\EvolutionCore.vcxproj">
       <Project>{561ad550-b857-4d93-aa39-5ca48e48e02f}</Project>
     </ProjectReference>
+    <ProjectReference Include="..\History\History.vcxproj">
+      <Project>{642c34fc-f20c-45a6-bab8-c75988c88f52}</Project>
+    </ProjectReference>
     <ProjectReference Include="..\Win32_appFramework\Win32_appFramework.vcxproj">
       <Project>{094eda97-b901-45f1-9735-dac22c5bc699}</Project>
     </ProjectReference>
