--- a/Evo/EvolutionConsole/EvolutionConsole.vcxproj
+++ b/Evo/EvolutionConsole/EvolutionConsole.vcxproj
@@ -181,6 +181,12 @@
     <ProjectReference Include="..\..\Toolbox\Utilities\Utilities.vcxproj">
       <Project>{d6e82f0a-c93f-4fa0-aacf-910ef2f59fdc}</Project>
     </ProjectReference>
+    <ProjectReference Include="..\EvoHistGlue\EvoHistGlue.vcxproj">
+      <Project>{73c1d72a-48dc-4a70-960c-b09d1b55c920}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\EvolutionCore\EvolutionCore.vcxproj">
+      <Project>{561ad550-b857-4d93-aa39-5ca48e48e02f}</Project>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
