--- a/Evo/EvoWindows/EvoWindows.vcxproj
+++ b/Evo/EvoWindows/EvoWindows.vcxproj
@@ -191,6 +191,9 @@
     <ProjectReference Include="..\..\Toolbox\WinBasics\WinBasics.vcxproj">
       <Project>{6a823b71-361a-428b-b329-203a6c5232ed}</Project>
     </ProjectReference>
+    <ProjectReference Include="..\D3D\D3D.vcxproj">
+      <Project>{a4747612-fa1d-444b-9b61-6d5c35601837}</Project>
+    </ProjectReference>
     <ProjectReference Include="..\EvolutionCore\EvolutionCore.vcxproj">
       <Project>{561ad550-b857-4d93-aa39-5ca48e48e02f}</Project>
     </ProjectReference>
