--- a/Evo/Win32_appFramework/Win32_appFramework.vcxproj
+++ b/Evo/Win32_appFramework/Win32_appFramework.vcxproj
@@ -180,8 +180,6 @@
     <ClCompile Include="MessagePump.cpp" />
     <ClCompile Include="StatusBar.cpp" />
     <ClCompile Include="StatusBar.ixx" />
-    <ClCompile Include="WorkThread.cpp" />
-    <ClCompile Include="WorkThread.ixx" />
     <ClCompile Include="WorkThreadInterface.cpp" />
     <ClCompile Include="WorkThreadInterface.ixx" />
   </ItemGroup>
@@ -200,6 +198,12 @@
     </ProjectReference>
     <ProjectReference Include="..\..\Toolbox\WinBasics\WinBasics.vcxproj">
       <Project>{6a823b71-361a-428b-b329-203a6c5232ed}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\EvolutionCore\EvolutionCore.vcxproj">
+      <Project>{561ad550-b857-4d93-aa39-5ca48e48e02f}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\History\History.vcxproj">
+      <Project>{642c34fc-f20c-45a6-bab8-c75988c88f52}</Project>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
