Evo work, WinHistLib

--- a/Evo/EvoHistGlue/EvoHistGlue.vcxproj
+++ b/Evo/EvoHistGlue/EvoHistGlue.vcxproj
@@ -96,6 +96,7 @@
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
       <EnableModules>true</EnableModules>
       <BuildStlModules>true</BuildStlModules>
+      <SDLCheck>true</SDLCheck>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
