--- a/Toolbox/Win32_utilities/Win32_utilities.vcxproj
+++ b/Toolbox/Win32_utilities/Win32_utilities.vcxproj
@@ -172,6 +172,8 @@
     <ClCompile Include="CoordAnimationCmd.ixx" />
     <ClCompile Include="SetGridCmd.ixx" />
     <ClCompile Include="SetScalesCmd.ixx" />
+    <ClCompile Include="Trace.cpp" />
+    <ClCompile Include="Trace.ixx" />
     <ClCompile Include="Win32_Event.ixx" />
     <ClCompile Include="Win32_Thread.cpp" />
     <ClCompile Include="Win32_Thread.ixx" />
